--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
   }
 }
 
@@ -31,8 +23,7 @@
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
-  }
-  to {
+}  to {
     transform: rotate(360deg);
   }
 }
